<resources>
    <string name="app_name">study</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_Learning">Learning</string>
    <string name="profile">Profile</string>
    <string name="saved">Saved</string>
    <string name="title_lean">Learn</string>
    <string name="title_Saved">Saved</string>
    <string name="title_profile">Profile</string>
    <string name="textc_hint">hint</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="text_hint">Hint</string>
    <string name="login">Login</string>
    <string name="email_account">email id</string>
    <string name="username">User Name</string>
    <string name="userprofile">User Profile</string>
    <string name="rating">Rating</string>
    <string name="share_app">Share App</string>
    <string name="more_apps">More Apps</string>
    <string name="developer_contact">Developer Contact</string>
    <string name="privecy_information">Privacy policy</string>
    <string name="aboutUs">About Us</string>
    <string name="version">Version</string>
    <string name="previousQuestion">Previous</string>
    <string name="nextQuestion">Next</string>
    <string name="QuestionAttanded">Question Attanded</string>
    <string name="totalQuestion">Total Question</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="Test_series">Test series</string>
    <string name="Quiz">Quiz</string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="Donthavaccount">Don’t have an account? Sign Up</string>
    <string name="enteremail">Phone Number</string>
    <string name="entername">Enter Name</string>
    <string name="signup">Sign Up</string>
    <string name="Continue">Continue</string>
</resources>