<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        style="@style/CardView_Reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">


                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/alertLottie"
                    android:layout_width="@dimen/alert_icon_size"
                    android:layout_height="@dimen/alert_icon_size"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_10dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/delete_animation" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/alertTitle"
                    style="@style/TextAppearance_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:backgroundTint="?colorOnPrimary"
                    android:text="@string/textc_hint"
                    android:textColor="@color/heading_color" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/alertSubTitle"
                    style="@style/TextAppearance_subheading_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:text="@string/text_hint"
                    android:textColor="@color/smallsubheading_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/alertBtnNegative"
                        style="@style/StyleButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cancel"
                        android:textColor="@color/white"
                        app:backgroundTint="@color/color_unselect_button" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/alertBtnPositive"
                        style="@style/StyleButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/delete"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>