<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/d150"
                        android:layout_height="@dimen/d150"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        app:cardCornerRadius="75dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ProgressBar
                                android:id="@+id/exam_result_percentage"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_centerInParent="true"
                                android:indeterminateOnly="false"
                                android:progressDrawable="@drawable/progress_bar_percantage" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/exam_result_tv_percentage"
                                style="@style/TextAppearance.Material3.BodyLarge"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center"
                                android:hint="00%" />


                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/margin_10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/exam_result_icon"
                                android:layout_width="@dimen/exam_icon_size"
                                android:layout_height="@dimen/exam_icon_size"
                                android:src="@drawable/ic_status_failed"
                                android:visibility="visible"></ImageView>


                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/exam_result"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="Fail"
                                android:padding="@dimen/margin_10dp" />

                        </LinearLayout>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/exam_result_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="Hey exam not passed" />


                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/layout_topcard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            style="@style/Card_View_Style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin_10dp"
                                android:orientation="vertical"
                                android:padding="@dimen/margin_5dp">

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/exam_result_examname"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/margin_10dp"
                                    android:text="Exam" />


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <LinearLayout
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentLeft="true"
                                        android:layout_weight="1"
                                        android:padding="@dimen/margin_10dp">

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:gravity="center"
                                            android:orientation="vertical">


                                            <com.google.android.material.textview.MaterialTextView
                                                android:id="@+id/exam_result_CompletionQuestion"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_gravity="start"
                                                android:text="00%"
                                                app:customColor="@color/colorResultCompletion"
                                                app:customColorEnable="true" />

                                            <com.google.android.material.textview.MaterialTextView
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_gravity="start"
                                                android:text="@string/QuestionAttanded"
                                                app:customColor="@color/colorResultHeading"
                                                app:customColorEnable="true" />


                                        </LinearLayout>
                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentLeft="true"
                                        android:layout_weight="1"
                                        android:padding="@dimen/margin_10dp">

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:gravity="center"
                                            android:orientation="vertical">


                                            <com.google.android.material.textview.MaterialTextView
                                                android:id="@+id/exam_result_TotalQuestion"
                                                android:layout_width="match_parent"

                                                android:layout_height="wrap_content"
                                                android:layout_gravity="start"
                                                android:text="00"
                                                app:customColor="@color/colorTotalQuestion"
                                                app:customColorEnable="true" />

                                            <com.google.android.material.textview.MaterialTextView
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_gravity="start"
                                                android:text="@string/totalQuestion"
                                                app:customColor="@color/colorResultHeading"
                                                app:customColorEnable="true" />


                                        </LinearLayout>
                                    </LinearLayout>


                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <LinearLayout
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentLeft="true"
                                        android:layout_weight="1"
                                        android:padding="@dimen/margin_10dp">

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:gravity="center"
                                            android:orientation="vertical">


                                            <com.google.android.material.textview.MaterialTextView
                                                android:id="@+id/exam_result_CorrectQuestion"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_gravity="start"
                                                android:text="00"
                                                app:customColor="@color/colorCorrectQuestion"
                                                app:customColorEnable="true" />

                                            <com.google.android.material.textview.MaterialTextView
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_gravity="start"
                                                android:text="@string/correct"
                                                app:customColor="@color/colorResultHeading"
                                                app:customColorEnable="true" />


                                        </LinearLayout>
                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentLeft="true"
                                        android:layout_weight="1"
                                        android:padding="@dimen/margin_10dp">


                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:gravity="center"
                                            android:orientation="vertical">


                                            <com.google.android.material.textview.MaterialTextView
                                                android:id="@+id/exam_result_WrongQuestion"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_gravity="start"
                                                android:text="00"
                                                app:customColor="@color/colorWrongQuestion"
                                                app:customColorEnable="true" />

                                            <com.google.android.material.textview.MaterialTextView
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_gravity="start"
                                                android:text="@string/wrong"
                                                app:customColor="@color/colorResultHeading"
                                                app:customColorEnable="true" />


                                        </LinearLayout>
                                    </LinearLayout>

                                </LinearLayout>

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </RelativeLayout>

                </LinearLayout>


            </RelativeLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.yogify.study.ui.component.ProgessLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:containlayoutenable="true"
        app:showprogess="false" />

</FrameLayout>
